--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             <h5>March 2023 - Feb 2024</h5>
             <p><em>Fido, Accra, Ghana</em></p>
             <ul>
-              <li>Local point of contact in raising +GHS18M in invester funds </li>
+              <li>Local point of contact in raising invester funds </li>
               <li>Researched and developed the framework for Mobile Device financing product</li>
               <li>Led the development and launch of a new USSD Channel *998#</li>
               <li>Closed a Savings partnership deal with Stanbic Bank Ghana</li>
@@ -337,7 +337,6 @@
               <li>Led and closed partnership with Old Mutual Ghana
               <li>Led the development and launch of Special Investment Plan product</li>
               <li>Led and closed a partnership deal with Cellulant</li>
-              <li>Saved Fido close to GHS1M in collection charges in new payments services provider collaboration </li>
             </ul>
           </div>
           <div class="resume-item">
@@ -375,7 +374,7 @@
             <h5>April 2015 - April 2022</h5>
             <p><em>First Atlantic Bank, Accra, Ghana</em></p>
             <ul>
-              <li>Developed the Digital Strategy for the bank with an expected net revenue of +USD30M.</li>
+              <li>Developed the bank's Digital Strategy.</li>
               <li>Key resource to annual audit and recertification to PCIDSS and ISO27001 standards.</li>
               <li>Contributed to the development of corporate publications, e.g., Annual Report, Board papers, etc.
               </li>
