--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <h5>April 2013 to date</h5>
             <p><em>El-Evangel Publications, Accra, Ghana</em></p>
             <ul>
-              <li>Designed and Plubished Top Fintech Voices Magazine.</li>
+              <li>Designed and Published Top Fintech Voices Magazine.</li>
               <li>Desiged and Published 7 ediitons of the Evangel Magazine</li>
               <li>Designed and Published TheKidz Magazine</li>
               <li>Designed and Published OWS Magazine</li>
