--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
                     <span>www.solomonagbemenya.com</span>
                   </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+233 24 325 1339</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+233268567635</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Accra, GHANA</span></li>
                 </ul>
               </div>
@@ -401,7 +401,8 @@
             <p><em>El-Evangel Publications, Accra, Ghana</em></p>
             <ul>
               <li>Designed and Published Top Fintech Voices Magazine.</li>
-              <li>Desiged and Published 7 ediitons of the Evangel Magazine</li>
+              <li>Desiged and Published 7 ediitons of the Evangel Magazine in partnership with Evangelical Presbyterian Church, Royal House Chapel, 
+                Charismatic Evangelic Ministry, Fountain Gate Chapel, Global Evangelical Church and Grace Chapel</li>
               <li>Designed and Published TheKidz Magazine</li>
               <li>Designed and Published OWS Magazine</li>
               <li>Published "Unleash the Gold Within</li>
@@ -728,7 +729,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+233 24 325 1339</p>
+                <p>+233 268567635</p>
               </div>
             </div>
           </div>
