--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             <p><em>El-Evangel Publications, Accra, Ghana</em></p>
             <ul>
               <li>Designed and Published Top Fintech Voices Magazine.</li>
-              <li>Desiged and Published 7 ediitons of the Evangel Magazine in partnership with Evangelical Presbyterian Church, Royal House Chapel, 
+              <li>Designed and Published 7 editions of the Evangel Magazine in partnership with Evangelical Presbyterian Church, Royal House Chapel, 
                 Charismatic Evangelic Ministry, Fountain Gate Chapel, Global Evangelical Church and Grace Chapel</li>
               <li>Designed and Published TheKidz Magazine</li>
               <li>Designed and Published OWS Magazine</li>
