--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Solomon Sedinam Agbemenya <br> </h1>
-      <p>"PMP, CPMC, LSSGB/BB, ISO27001 LI, BCMS22301 LI, EIC"<span></span>
+      <p>"CAIS, CSM, PMP, CPMC, LSSGB/BB, ISO27001 LI, BCMS22301 LI, EIC"<span></span>
       </p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -314,6 +314,17 @@
                 relationships.</li>
               <li>Understanding clients' business needs, challenges, and goals to deliver tailored solutions and
                 value-added services.</li>
+            </ul>
+          </div>
+                    <div class="resume-item">
+            <h4>Senior Consultant</h4>
+            <h5>April 2024 - August 2024</h5>
+            <p><em>Knowledge Capital Group, Nigeria </em></p>
+            <ul>
+              <li>Reviewed key processes within the Credit Risk Management ecosystem of the Bank (Client).</li>
+              <li>Reviewed the competency/skill health of people involved in the Credit Risk Management ecosystem of the Bank (Client).</li>
+              <li>Conducted Competency Assessment along all the strategic key competency areas for the CRM.</li>
+              <li>Developed a comprehensive report to the Executive Committee of the Bank on the review of the Credit Risk Management ecosystem.</li>
             </ul>
           </div>
           <div class="resume-item">
