--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                 value-added services.</li>
             </ul>
           </div>
-                    <div class="resume-item">
+          <div class="resume-item">
             <h4>Senior Consultant</h4>
             <h5>April 2024 - August 2024</h5>
             <p><em>Knowledge Capital Group, Nigeria </em></p>
@@ -326,6 +326,40 @@
               <li>Conducted Competency Assessment along all the strategic key competency areas for the CRM.</li>
               <li>Developed a comprehensive report to the Executive Committee of the Bank on the review of the Credit Risk Management ecosystem.</li>
             </ul>
+          <div class="resume-item">
+            <h4>Senior Consultant</h4>
+            <h5>September 2024 - To date</h5>
+            <p><em>PYI Consult Limited, UK </em></p>
+            <ul>
+              <li>Developed Leadership Curriculum for Amahoro Fellowship.</li>
+              <li>Offered Business Advisory to 30+ Fellows.</li>
+              <li>Reviewed and gave expert advice on Amahoro Fellowship content strategy.</li>
+              <li>Project managed the Amahoro Fellowship Intensive Orientation.</li>
+          <div class="resume-item">
+            <h4>Senior Consultant</h4>
+            <h5>April 2024 - To date</h5>
+            <p><em>First Atlantic Bank </em></p>
+            <ul>
+              <li>Developed a comprehensive Business Strategy for FlexiPay.</li>
+              <li>Collaborated with the FlexiPay team and Management to develop a comprehensive business case for scaling up FlexiPay.</li>
+              <li>Crafted a concise and compelling executive summary of the business plan, designed to attract investor interest and secure funding.</li>
+              <li>Prepared an RFP and facilitated its circulation to vendors for the valuation of FlexiPay.</li>
+              <li>Reviewed proposals submitted by vendors in response to the RFP.</li>
+              <li>Coordinated with relevant stakeholders to conduct a thorough financial valuation of FlexiPay’s assets and operations, positioning the company for successful recapitalization.</li>
+              <li>Identified and engaged with investment funds that align with FlexiPay’s business objectives to drive fundraising efforts.</li>
+              <li>Developed a detailed fundraising plan to secure $10 million in capital for FlexiPay.</li>
+              <li>Coordinated with relevant stakeholders to conduct a thorough financial valuation of FlexiPay’s assets and operations, positioning the company for successful recapitalization.</li>
+              <li>Identified and engaged with investment funds that align with FlexiPay’s business objectives to drive fundraising efforts.</li>
+            </ul>  
+          <div class="resume-item">
+            <h4>Business Advisor</h4>
+            <h5>September 2024 - November 2024</h5>
+            <p><em>ALX Ghana </em></p>
+            <ul>
+              <li>Provided business advisory services to StartUps to scale their businesses.</li>
+              <li>Managed the relationship between ALX and the Startup during the Diagnostics and Strategic Planning phase.</li>
+              <li>Provide mentoring and support to the Founder/CEO of the Startup .</li>
+            </ul>              
           </div>
           <div class="resume-item">
             <h4>Head of Business Development</h4>
