--- a/index.html
+++ b/index.html
@@ -325,7 +325,8 @@
               <li>Reviewed the competency/skill health of people involved in the Credit Risk Management ecosystem of the Bank (Client).</li>
               <li>Conducted Competency Assessment along all the strategic key competency areas for the CRM.</li>
               <li>Developed a comprehensive report to the Executive Committee of the Bank on the review of the Credit Risk Management ecosystem.</li>
-          <div class="resume-item">
+           </div>
+              <div class="resume-item">
             <h4>Senior Consultant</h4>
             <h5>September 2024 - To date</h5>
             <p><em>PYI Consult Limited, UK </em></p>
@@ -333,6 +334,7 @@
               <li>Offered Business Advisory to 30+ Fellows.</li>
               <li>Reviewed and gave expert advice on Amahoro Fellowship content strategy.</li>
               <li>Project managed the Amahoro Fellowship Intensive Orientation.</li>
+           </div>
           <div class="resume-item">
             <h4>Senior Consultant</h4>
             <h5>April 2024 - To date</h5>
@@ -348,7 +350,8 @@
               <li>Developed a detailed fundraising plan to secure $10 million in capital for FlexiPay.</li>
               <li>Coordinated with relevant stakeholders to conduct a thorough financial valuation of FlexiPay’s assets and operations, positioning the company for successful recapitalization.</li>
               <li>Identified and engaged with investment funds that align with FlexiPay’s business objectives to drive fundraising efforts.</li>
-            </ul>  
+            </ul>
+             </div>
           <div class="resume-item">
             <h4>Business Advisor</h4>
             <h5>September 2024 - November 2024</h5>
