--- a/index.html
+++ b/index.html
@@ -332,26 +332,22 @@
             <h4>Senior Consultant</h4>
             <h5>September 2024 - To date</h5>
             <p><em>PYI Consult Limited, UK </em></p>
-              <li>Developed Leadership Curriculum for Amahoro Fellowship.</li>
+              <li>Developed Leadership Curriculum for a Fellowship.</li>
               <li>Offered Business Advisory to 30+ Fellows.</li>
-              <li>Reviewed and gave expert advice on Amahoro Fellowship content strategy.</li>
-              <li>Project managed the Amahoro Fellowship Intensive Orientation.</li>
+              <li>Reviewed and gave expert advice on Fellowship content strategy.</li>
+              <li>Project managed the Fellowship Intensive Orientation.</li>
            </div>
           <div class="resume-item">
             <h4>Senior Consultant</h4>
             <h5>April 2024 - To date</h5>
             <p><em>First Atlantic Bank </em></p>
             <ul>
-              <li>Developed a comprehensive Business Strategy for FlexiPay.</li>
-              <li>Collaborated with the FlexiPay team and Management to develop a comprehensive business case for scaling up FlexiPay.</li>
-              <li>Crafted a concise and compelling executive summary of the business plan, designed to attract investor interest and secure funding.</li>
-              <li>Prepared an RFP and facilitated its circulation to vendors for the valuation of FlexiPay.</li>
+              <li>Developed a comprehensive mobile application Business Strategy for the Bank.</li>
+              <li>Crafted a concise and compelling executive summary of the mobile aplication business plan, designed to attract investor interest and secure funding.</li>
+              <li>Prepared an RFP and facilitated its circulation to vendors for the valuation of mobile application.</li>
               <li>Reviewed proposals submitted by vendors in response to the RFP.</li>
-              <li>Coordinated with relevant stakeholders to conduct a thorough financial valuation of FlexiPay’s assets and operations, positioning the company for successful recapitalization.</li>
-              <li>Identified and engaged with investment funds that align with FlexiPay’s business objectives to drive fundraising efforts.</li>
-              <li>Developed a detailed fundraising plan to secure $10 million in capital for FlexiPay.</li>
-              <li>Coordinated with relevant stakeholders to conduct a thorough financial valuation of FlexiPay’s assets and operations, positioning the company for successful recapitalization.</li>
-              <li>Identified and engaged with investment funds that align with FlexiPay’s business objectives to drive fundraising efforts.</li>
+              <li>Coordinated with relevant stakeholders to conduct a thorough financial valuation of the mobile applications assets and operations, positioning the company for successful recapitalization.</li>
+              <li>Developed a detailed fundraising plan to secure $10 million in capital for the mobile application.</li>
             </ul>
              </div>
           <div class="resume-item">
@@ -371,20 +367,14 @@
             <ul>
               <li>Local point of contact in raising invester funds </li>
               <li>Researched and developed the framework for Mobile Device financing product</li>
-              <li>Led the development and launch of a new USSD Channel *998#</li>
-              <li>Closed a Savings partnership deal with Stanbic Bank Ghana</li>
-              <li>Signed partnership deal with Hubtel for Payments product colloboration</li>
-              <li>Arranged and led the partnership deal with Jumia Ghana for Mobile Device Financing</li>
-              <li>Launched a Financial Literacy Program dubbed Fido Money Matters</li>
+              <li>Led the development and launch of a new USSD Channel</li>
+              <li>Closed a Savings partnership deal with partner bank</li>
+              <li>Signed partnership deal with Payment Services Provider for Payments product colloboration</li>
+              <li>Developed and aunched a Financial Literacy Program</li>
               <li>Arranged and closed a collaboration with Harvard Business School for the Field Global Immersion
                 program
               </li>
-              <li>Closed partnership deal on Credit Life with Enterprise Life</li>
-              <li>Facilitated partnership with Adehyeman Savings & Loans</li>
-              <li>Closed partnership with Lancaster University</li>
-              <li>Led and closed partnership with Old Mutual Ghana
-              <li>Led the development and launch of Special Investment Plan product</li>
-              <li>Led and closed a partnership deal with Cellulant</li>
+              <li>Closed various partnership deals to facilitate business growth and product rollout. 
             </ul>
           </div>
           <div class="resume-item">
@@ -392,12 +382,11 @@
             <h5>May 2022 - Feb 2023</h5>
             <p><em>Fido Ghana, Accra, Ghana</em></p>
             <ul>
-              <li>Led a team to implement and certify Fido to ISO27001 Standards.</li>
-              <li>Led the Setup of Fido’s intended Wallet business in Ghana including, hiring, regulation,
-                business development and operations.</li>
-              <li>Signed a savings product development in collaboration with Stanbic Bank Ghana</li>
+              <li>Led a team to implement ISO27001 Standards.</li>
+              <li>Led the Setup of the intended Wallet business in Ghana
+              <li>Signed a savings product development in collaboration with a Bank/li>
               <li>Launched a payments product in collaboration with a Payments Services Provider</li>
-              <li>Led the development of Savings Backed loan product in partnership with Old Mutual Ghana</li>
+              <li>Led the development of Savings Backed loan product in partnership with Insurance Company</li>
             </ul>
 
           </div>
@@ -413,8 +402,7 @@
                 system or product requirements and deliverables in line with project budgets and timelines.</li>
               <li>Provided status reports on all projects to Executive Management and project stakeholders.</li>
               <li>Coordinated activities and managing project teams for the design, development, integration, upgrade
-                or change of
-                IT software and other IT related products.</li>
+                or change of IT software and other IT related products.</li>
             </ul>
           </div>
           <div class="resume-item">
@@ -430,16 +418,12 @@
                 objectives.
               </li>
               <li>Evaluated business fundamentals, industry trends (local and global), market performance and
-                strategic
-                opportunities to enable the Bank meet its short-, medium- and long-term goals and objectives.</li>
+                strategic opportunities to enable the Bank meet its short-, medium- and long-term goals and objectives.</li>
               <li>Monitored the implementation of initiatives that supported the organisations vision and direction.
               </li>
               <li>Provided support towards Management Team Retreat</li>
-              <li>Drafted, signed off and implemented 57 ISMS policies, 71 frameworks and 12 operational manuals in line
-                with ISO27001 standards</li>
               <li>Key stakeholder in the project team that successfully executed a number of projects, notable are:
-                Banks
-                mobile and USSD applications, Customer Relationship Manager System, Setup of the banks Contact Centre.
+                Banks mobile and USSD applications, Customer Relationship Manager System, Setup of the banks Contact Centre.
               </li>
             </ul>
           </div>
@@ -470,10 +454,8 @@
                 process
                 solutions.</li>
               <li>Collaborated with business subject matter experts to understand, develop, maintain and distribute
-                business
-                processes, frameworks and policy documents.</li>
+                business processes, frameworks and policy documents.</li>
               <li>Ensured process project clarity with regards to goals, deliverables and timelines.</li>
-              <li>Updating of Premises Access Register.</li>
             </ul>
           </div>
           <div class="resume-item">
@@ -494,7 +476,7 @@
             <ul>
               <li>Tele Sales (Banc assurance and Loans)</li>
               <li>Loan officer, Retail Banking Unit</li>
-              <li>Responsible for closing a deal with clients requesting an early repayment of their existing loans.
+              <li>Responsible for closing clients requesting an early repayment of their existing loans.
                 (Attrition)
               </li>
               <li>Product research and competitive analysis</li>
